k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: course-reservations
spec:
  selector:
    app: course-reservations
  ports:
    - name: http
      port: 80
      targetPort: 8080
