k8s/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: course-reservations
spec:
  rules:
    - host: courses.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: course-reservations
                port:
                  number: 80
